Replace Files.readstring method for Java 8 compatability